Completed with responsiveness

--- a/index.html
+++ b/index.html
@@ -8,6 +8,68 @@
     <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
-    <div></div>
+    <div class="top">
+        <H1>About US</H1>
+        <p>THE FASHION S6TORE caters to thoughtful shoppers who appreciate unique designs and top quality pieces you just can't find
+            anywhere else. We are constantly curating fresh new collections and looking for the next big thing our customers will love. Founded in
+            2019, we are proud to be your Online Clothing Shop that you can rely on our service and care.
+            
+            </p>
+        <p>Our Mission is to make a difference through our branding by staying ahead of the fashion trends, defining style and giving customers
+            what they want.
+        </p>
+        <p>Our Vision is to change the way ou society connects with the fashion industry by our customers with that are
+            effically and responsibly sourced.
+        </p>
+    </div>
+    <div class="bottom">
+        <div class="heading">
+            <h1 class="team">Our Team</h1>
+        </div>
+   <div class="profile">
+        <div class="Jane">
+            <img src="./pamela-baxter.webp" alt="">
+            <div class="detail">
+                    <h1>Pamela Baxter</h1>
+                <h3>CEO and Founder</h3>
+                <p>Pamela Baxter CEO of Clothing
+                    segment North America and president
+                    of Chrtstian Dior Couture.</p>
+                    <h3>baxyboo@example.com</h3>
+                    <button>Contact</button>
+            </div>
+        </div>
+        <div class="Mika">
+            <img src="./1537585042614.jpg" alt="">
+            <div class="detail">
+                <h1>Mika Ross</h1>
+                <h3>Designer</h3>
+                <p>
+                    Mika Ross is Designer of Clothing
+segment North America and Designer
+of Christian Dior Couture.
+                </p>
+                <h3>mika@example.com</h3>
+                <button>Contact</button>
+            </div>
+
+        </div>
+        <div class="John">
+            <img src="./shutterstock_171921824.jpg" alt="">
+            <div class="detail">
+                <h1>John Doe</h1>
+                <h3>Consultant</h3>
+                <p>
+                   John Doe is Consultant of Clothing
+                    segment North America and
+                    consultant of Christian Dior Couture
+                </p>
+                <h3>john@example.com</h3>
+                <div class="wrap">     <button>Contact</button></div>
+             
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
